k8s-yaml/nsx-demo/nsx-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo-svc
  labels:
    app: nsxdemo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: nsxdemo
  type: LoadBalancer
