k8s-yaml/nsx-demo/nsx-demo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsx-demo-policy
spec:
  podSelector:
    matchLabels:
      app: nsxdemo
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
